--- a/app/src/main/res/layout/activity_bottom.xml
+++ b/app/src/main/res/layout/activity_bottom.xml
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
-            android:text="好友"
+            android:text="通讯录"
             android:textColor="#4D4D4D"
             android:textStyle="bold" />
     </LinearLayout>
