--- a/app/src/main/res/layout/page_01.xml
+++ b/app/src/main/res/layout/page_01.xml
@@ -3,9 +3,25 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+    <RelativeLayout
+        android:id="@+id/rl_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="55dp"
+        android:background="#1e90ff"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="聆途"
+            android:textColor="#ffffff"
+            android:textSize="20.0sp"/>
+    </RelativeLayout>
 
     <ListView
         android:id="@+id/listview"
+        android:layout_below="@id/rl_layout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
