--- a/app/src/main/res/layout/page_02.xml
+++ b/app/src/main/res/layout/page_02.xml
@@ -5,16 +5,34 @@
                 android:gravity="center_vertical"
                 android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/rl_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="55dp"
+        android:background="#1e90ff"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="通讯录"
+            android:textColor="#ffffff"
+            android:textSize="20.0sp"/>
+    </RelativeLayout>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none"
+        android:layout_below="@id/rl_layout"
         android:id="@+id/listview"/>
 
     <com.example.tr.tourhear.utils.SideBarView
         android:id="@+id/sidebarview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/rl_layout"
         android:layout_alignParentRight="true"/>
 
     <TextView
