--- a/app/src/main/res/layout/personal_collection.xml
+++ b/app/src/main/res/layout/personal_collection.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:background="#EEE"
+                android:orientation="vertical">
+
     <RelativeLayout
         android:id="@+id/rl_layout"
         android:layout_width="fill_parent"
@@ -10,11 +13,22 @@
         android:background="#1e90ff"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/btn_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/selector_btn_back"
+            android:paddingLeft="10dp"
+            android:textColor="#ffffff"
+            android:textSize="16sp"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="发现"
+            android:text="收藏"
             android:textColor="#ffffff"
             android:textSize="20.0sp"/>
     </RelativeLayout>
@@ -23,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="发现"
+        android:text="收藏"
         android:textSize="30dp" />
 
 </RelativeLayout>
